# ranking-challenge

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  ci.yml  docker-compose.yml  isPackageDir.py  pyproject.toml  pytest.ini  pyvenv.cfg  requirements.txt  test_app.py
docker/: Dockerfile.job_scheduler  Dockerfile.ranking_server  Dockerfile.sandbox_worker  Dockerfile.scorer_worker  Dockerfile.scorer_worker.test_harness  Dockerfile.scraper_worker.ingester  Dockerfile.scraper_worker.scraper
docs/: api_reference.md
examples/basic/: README.md  app_caller.py  caller.py  ranking_server.py  ranking_server_test.py  requirements.txt  sample_data.py  setup.py
examples/basic/src/: ranking_server.py
examples/basic/tests/: ranking_server_test.py
examples/chat_gpt/: README.md  caller.py  ranking_server.py  ranking_server_test.py  requirements.txt  sample_data.py  setup.py
examples/chat_gpt/src/: ranking_server.py
examples/chat_gpt/tests/: ranking_server_test.py
examples/combined/: Dockerfile.job_scheduler  Dockerfile.ranking_server  Dockerfile.sandbox_worker  Dockerfile.scorer_worker  Dockerfile.scraper_worker.ingester  Dockerfile.scraper_worker.scraper  Makefile  README.org  ci.sh  conftest.py  docker-compose.yml  environment.txt  environment.yml  ranking_server.py  ranking_server_test.py  requirements.txt  test_data.py  util.py
examples/combined/job_scheduler/: Dockerfile  requirements.txt  scheduler.py
examples/combined/ranking_server/: Dockerfile  logging_config.yaml  ranking_server.py  ranking_server_test.py  requirements.txt  setup.py  test_data.py
examples/combined/ranking_server/src/: ranking_server.py
examples/combined/ranking_server/tests/: ranking_server_test.py
examples/combined/sandbox_worker/: Dockerfile  celery_app.py  conftest.py  requirements.txt  setup.py  tasks.py  worker.py  worker_test.py
examples/combined/sandbox_worker/src/: tasks.py  worker.py
examples/combined/sandbox_worker/tests/: conf_test.py  worker_test.py
examples/combined/scorer_worker/: Dockerfile.scorer  Dockerfile.scorer_worker  Makefile  celery_app.py  conftest.py  requirements.txt  scorer_advanced.py  scorer_basic.py  scorer_test.py  scorer_test_client.py  scorer_test_service.py  setup.py  tasks.py
examples/combined/scorer_worker/src/: Makefile  scorer_advanced.py  scorer_basic.py  scorer_test_client.py  scorer_test_service.py  tasks.py
examples/combined/scorer_worker/tests/: conf_test.py  scorer_test.py
examples/combined/scraper_worker/: Dockerfile.ingester  Dockerfile.scraper  README.org  celery_app.py  ingester.py  persistence.py  requirements.ingester.txt  requirements.scraper.txt  setup.py  tasks.py
examples/combined/scraper_worker/src/: celery_app.py  docker-compose.yml  ingester.py  persistence.py  sql_statements.py  tasks.py
examples/combined/util/: setup.py
examples/combined/util/src/: scheduler.py
examples/development/: README.md  ranking_server.py  ranking_server_test.py  sample_data.py
examples/fastapi_nltk/: README.md  caller.py  ranking_server.py  ranking_server_test.py  requirements.txt  sample_data.py  setup.py
examples/fastapi_nltk/src/: ranking_server.py
examples/fastapi_nltk/tests/: ranking_server_test.py
examples/integration_test/: README.md  conftest.py  integration_test.py  requirements.txt
examples/mistral_model/: James_bert.ipynb  James_mistral.ipynb  facebook_results.json  model.py  model_process.ipynb  reddit_results.json  twitter_results.json
examples/mistral_model/logs/: events.out.tfevents.1713981171.dhcp-vl2043-6078.cornell-visitor.cit.cornell.edu.3558.0  events.out.tfevents.1713981481.dhcp-vl2043-6078.cornell-visitor.cit.cornell.edu.3558.1  events.out.tfevents.1713981985.dhcp-vl2043-6078.cornell-visitor.cit.cornell.edu.3558.2
examples/mistral_model/runs/Apr24_11-20-26_dhcp-vl2043-6078.cornell-visitor.cit.cornell.edu/: events.out.tfevents.1713972026.dhcp-vl2043-6078.cornell-visitor.cit.cornell.edu.52781.0
examples/models/: README.md  fake.py  fake_test.py  request.py  response.py  survey.py
examples/scraper/: Dockerfile.scraper  README.org  ingester.py  persistence.py  requirements.scraper.txt  tasks.py
examples/worker_sqlite_redis/: Dockerfile  Makefile  README.org  conftest.py  docker-compose.yml  helpers.py  ranking_server_test.py  requirements.txt  tasks.py  worker.py  worker_test.py
module/: DEVELOPMENT.md  LICENSE  README.md  latency_data_sampling.ipynb  latency_testing.ipynb  latency_testing.py  pyproject.toml  requirements.txt  setup.py  twitter_history.json
module/src/ranking_challenge/: __init__.py  fake.py  fake_test.py  grafana_metrics_middleware.py  prometheus_metrics_otel_middleware.py  request.py  response.py  survey.py  test.py
module/src/ranking_challenge/util/: __init__.py  db_utils.py  util.py
sample data/: Data_Pull.py  Preprocessing.py  README.md  final_facebook_data.json  final_reddit_data.json  final_twitter_data.json
sample_data/: README.md  README.rtf  data_pull.py  normalize_posts.py  preprocessing.py  seed_post_db.py  sql.py  user_pool.py
verification/integration_test/: README.md  integration_test.py
verification/integration_test/test_data/: facebook.csv  reddit.csv  twitter.json
verification/latency_test/: README.md  facebook_history.json  latency_data_sampling.ipynb  latency_testing.ipynb  latency_testing.py  reddit_history.json
