# pyproject.toml

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ranking_challenge_examples"
version = "2.0.0"
description = "The Prosocial Ranking Challenge"
authors = ["Ian Baker <ian@sonic.net>"]
readme = "README.md"
license = "MIT"
homepage = "https://humancompatible.ai/news/2024/01/18/the-prosocial-ranking-challenge-60000-in-prizes-for-better-social-media-algorithms/"
repository = "https://github.com/humancompatibleai/ranking-challenge"
keywords = ["ranking", "social media", "challenge"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pytest = "^6.2"
pydantic = "^1.8"
faker = "^8.0"
pandas = "^1.2"
numpy = "^1.19"
celery = "^5.0"
redis = "^4.0.0"
uvicorn = "^0.29.0"
ranking_challenge = { path = "module" }
fastapi = "^0.63"
psycopg2 = "^2.8"
sqlalchemy = "^1.3"
requests = "^2.25"
twscrape = { git = "https://github.com/vladkens/twscrape.git", rev = "main" }
celery-redbeat = "^1.0"
nltk = "^3.5"
flask = "^3.0.3"
flask-cors = "^4.0.1"
openai = "^1.30.3"
python-dotenv = "^1.0.1"
fakeredis = "^2.23.2"
sql = "^2022.4.0"

[tool.poetry.dev-dependencies]
pip-tools = "*"
pytest = "*"
ruff = "*"

[tool.poetry.extras]
module = ["pytest", "pydantic", "faker"]
sample_data = ["pandas", "numpy"]
examples_combined_ranking_server = ["celery", "uvicorn", "ranking_challenge", "redis", "pytest"]
examples_combined_scorer_worker = ["pydantic", "celery", "fastapi", "redis", "pytest", "pandas", "nltk", "uvicorn"]
examples_combined = ["celery", "redis", "pytest", "pandas", "nltk", "uvicorn", "ranking_challenge"]
examples_combined_job_scheduler = ["celery", "celery-redbeat"]
examples_combined_sandbox_worker = ["celery", "redis", "pytest", "pandas", "nltk", "psycopg2", "celery-redbeat", "sqlalchemy"]
examples_combined_scraper_worker = [
    "celery",
    "fastapi",
    "pytest",
    "redis",
    "psycopg2",
    "requests",
    "celery-redbeat",
    "uvicorn",
    "twscrape"
]
util = ["celery", "celery-redbeat"]

[tool.poetry.urls]
homepage = "https://humancompatible.ai/news/2024/01/18/the-prosocial-ranking-challenge-60000-in-prizes-for-better-social-media-algorithms/"
repository = "https://github.com/humancompatibleai/ranking-challenge"
blog = "https://rankingchallenge.substack.com/"

[tool.poetry.scripts]
rcfaker = "ranking_challenge.fake:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["E501"]
